# snail-sgt

./: .gitignore  README.md  pyproject.toml  setup.py
src/snail_sgt/: dialogue.py
src/snail_sgt/tci/: phi2.py
